fix(css): revert alignment

--- a/ui/src/css/q-calendar.sass
+++ b/ui/src/css/q-calendar.sass
@@ -43,12 +43,15 @@
 
   &__left
     text-align: left !important
+    justify-content: flex-start
 
   &__center
     text-align: center !important
+    justify-content: center
 
   &__right
     text-align: right !important
+    justify-content: flex-end
 
   &__justify
     justify-content: space-between !important
